# MD-Reader

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  SECURITY.md  SIGNING.md  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  package-lock.json  package.json  tsconfig.web.json  vite.tauri.config.ts  vite.web.config.ts  vitest.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
design/v2/: MD Reader v2.html  ai-panel.jsx  app.jsx  data.jsx  editor.jsx  library.jsx  reader.jsx  styles.css
design/v2/v2/: app.jsx  editor.jsx  library.jsx  panels.jsx  reader.jsx  styles.css
docs/: ARCHITECTURE.md  TAURI-EXPERIMENT.md  TAURI-PORT-PLAN.md  WEB-AND-NATIVE.md  index.html
sample-library/: README.md  chapter-1.md  chapter-2.md
sample-library/.mdreader/: data.json
sample-library/demos/: charts-showcase.md  diagrams-showcase.md  math.md  media-showcase.md  rich-content.md  science-showcase.md  slides-and-tasks.md  tables-callouts-showcase.md
sample-library/demos/.mdreader/: data.json
sample-library/guides/: keyboard-shortcuts.md
scripts/: check-restore.mjs  fetch-fonts.mjs  gen-icon.mjs  shoot.mjs  verify-cdp.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai.rs  commands.rs  config.rs  digest.rs  frontmatter.rs  lib.rs  paths.rs  protocol.rs  sidecar.rs  state.rs
src/main/: ai.ts  index.ts  ipc.ts  safe-path.test.ts  safe-path.ts  sidecar.ts  store.ts
src/preload/: index.d.ts  index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  main.tsx
src/renderer/src/assets/: main.css
src/renderer/src/components/: AiPanel.tsx  CommandPalette.tsx  ConfirmDeleteModal.tsx  CoursePanel.tsx  CreatePanel.tsx  DocInfoPanel.tsx  Editor.tsx  ErrorBoundary.tsx  FlashcardReview.tsx  GraphView.tsx  HighlightsView.tsx  Icons.tsx  Library.tsx  Reader.tsx  ReadmePanel.tsx  SettingsView.test.ts  SettingsView.tsx  ShortcutsOverlay.tsx  SlidesView.tsx  TasksView.tsx  TemplatePicker.tsx  Toc.tsx  settings-import.test.ts
src/renderer/src/lib/: aiClient.test.ts  aiClient.ts  annotations.test.ts  annotations.ts  chart.test.ts  chart.ts  docinfo.ts  (+21 more)
src/shared/: ai-endpoints.test.ts  ai-endpoints.ts  ai-models.test.ts  ai-models.ts  types.ts
src/web/: WebApp.tsx  WebReader.tsx  index.html  main.tsx  web.css
src/web/public/: manifest.webmanifest  sw.js
(+1 files in other folders)
