[package]
name = "md-reader-tauri"
version = "2.0.0"
description = "MD Reader - a private, offline-first Markdown reader, library and editor"
authors = ["Brendan Malloy"]
license = "MIT"
repository = "https://github.com/MalloyTheDev/MD-Reader"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
# HTTP for AI providers, rustls so we do not depend on a system OpenSSL. The SSRF guard
# (manual redirect policy + host pinning) is built on top of this in the AI step.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util"] }
futures-util = "0.3"
# Recursive vault walk + recycle-bin delete + config dir resolution + file watching.
walkdir = "2"
trash = "5"
dirs = "5"
notify = "6"
notify-debouncer-full = "0.3"
# Secret redaction in the project digest before it can be sent to an LLM (STEP 5 + STEP 7).
regex = "1"

# OS secret store for AI keys, parity with Electron safeStorage. The credential-store backend
# is platform-specific, so the feature is selected per target (avoids compiling Linux
# secret-service / dbus on Windows). MD Reader currently ships Windows only; the macOS/Linux
# entries are ready for the cross-platform roadmap item.
[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
